# manip_ws

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  att1.yaml  atttt1.yaml  bmtt.yaml  btt1_actions.yaml  btt1_actions1.yaml  container_states.yaml  containertest.yaml  falas_robo.txt  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kevin_levin_fantasmatico.ros2_control.xacro  kevin_levin_fantasmatico.srdf  kevin_levin_fantasmatico.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pick_telemetry/: pick_telemetry_20260625_211917.csv  pick_telemetry_20260625_213449.csv  pick_telemetry_20260625_213538.csv  pick_telemetry_20260625_213624.csv  pick_telemetry_20260626_145512.csv  pick_telemetry_20260626_145652.csv  pick_telemetry_20260626_145724.csv  pick_telemetry_20260626_150747.csv  pick_telemetry_20260626_152706.csv  pick_telemetry_20260626_152837.csv  pick_telemetry_20260626_152906.csv
src/apriltag_ros/cfg/: tags_36h11.yaml
src/manip_audio/: package.xml  setup.cfg  setup.py
src/manip_audio/manip_audio/: speech_node.py
src/manip_audio/test/: test_speech_node.py
src/manip_bringup/: CMakeLists.txt  package.xml
src/manip_bringup/config/: manip_moveit.rviz  manip_moveit_rasp.rviz  ros2_controllers.yaml
src/manip_bringup/launch/: manip_bringup.launch.xml  manip_control.launch.xml  manip_pc.launch.xml  manip_pc_test.launch.xml
src/manip_bt/: CMakeLists.txt  package.xml
src/manip_bt/behavior_tree_manip/: ATT1.yaml  BMT.yaml  competition_diff_test.yaml  competition_sample_btt1.yaml  test1.xml  test2.xml  test3.xml  ws_table_mapping.yaml
src/manip_bt/include/manip_bt/: go_to_named_pose_bt.hpp  pick_tag_bt.hpp  place_tag_bt.hpp
src/manip_bt/src/: bt_executor.cpp  bt_yaml_executor.cpp  competition_yaml_translator.cpp  go_to_named_pose_bt.cpp  pick_tag_bt.cpp  place_tag_bt.cpp  task_planner.cpp
src/manip_commander/: CMakeLists.txt  package.xml
src/manip_commander/src/: commander_template.cpp  tests_moveit.cpp
src/manip_description/: CMakeLists.txt  package.xml
src/manip_description/launch/: display.launch.xml
src/manip_description/meshes/: Base.stl  Foguete.stl  Garra430_teste.stl  Link1.stl  Link3.stl  base_link.stl  garra.stl  left_finger.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  right_finger.stl
src/manip_description/rviz/: urdf_config.rviz
src/manip_description/urdf/: arm.xacro  common_properties.xacro  gripper.xacro  manip.ros2_control.xacro  manip.urdf.xacro
src/manip_hardware/: CMakeLists.txt  manip_hardware_interface.xml  package.xml
src/manip_hardware/include/manip_hardware/: arm_hardware_interface.hpp  xm540_driver.hpp
src/manip_hardware/src/: arm_hardware_interface.cpp
src/manip_moveit_config/: .setup_assistant  package.xml
src/manip_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  manip.ros2_control.xacro  manip.srdf  manip.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/manip_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/manip_task_execution/: CMakeLists.txt  package.xml
src/manip_task_execution/include/manip_task_execution/: container_state_store.hpp  manipulator_execution_lock.hpp
src/manip_task_execution/src/: container_state_store.cpp  mtc_pick_action_node.cpp  mtc_place_action_node.cpp  pick_galera.py  pick_recovery_action_node.py  place_galera.py
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/include/mtc_tutorial/: analytical_ik.hpp  container_state_store.hpp  manipulator_execution_lock.hpp
src/mtc_tutorial/launch/: mtc.launch.py
src/mtc_tutorial/scripts/: pick_telemetry_plotter.py
src/mtc_tutorial/src/: analytical_ik_node.cpp  container_state_store.cpp  mtc_node.cpp  mtc_pick_action_node.cpp  mtc_place_action_node.cpp  varredura.py
src/my_robot_msgs/: CMakeLists.txt  package.xml
src/my_robot_msgs/action/: PickTag.action  PlaceTag.action
