<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manip_task_execution</name>
  <version>0.0.0</version>
  <description>Pick and place task execution nodes for the manipulator.</description>
  <maintainer email="robofei-work@todo.todo">robofei-work</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>manip_moveit_config</depend>
  <depend>ament_index_cpp</depend>
  <depend>my_robot_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
